--- a/packages/svelte/package.json
+++ b/packages/svelte/package.json
@@ -3,15 +3,19 @@
   "version": "3.2.0",
   "description": "Config-based router for Svelte in style of Vue Router with SSR support",
   "author": "Alexey Solovyov <plotinka@lyoha.info>",
-  "homepage": "https://github.com/easyroute-router/easyroute#readme",
+  "homepage": "https://easyroute.lyoha.info",
   "license": "MIT",
   "main": "./index.js",
   "types": "./types.d.ts",
   "directories": {
-    "lib": "lib"
+    "lib": "lib",
+    "ssr": "ssr",
+    "useCurrentRoute": "useCurrentRoute"
   },
   "files": [
-    "lib"
+    "lib",
+    "ssr",
+    "useCurrentRoute"
   ],
   "publishConfig": {
     "access": "public"
@@ -21,13 +25,23 @@
     "url": "git+https://github.com/easyroute-router/easyroute.git"
   },
   "scripts": {
-    "test": "echo \"Error: run tests from root\" && exit 1"
+    "test": "jest"
   },
   "bugs": {
     "url": "https://github.com/easyroute-router/easyroute/issues"
   },
   "dependencies": {
-    "@easyroute/core": "2.0.0",
+    "@easyroute/core": "2.0.0"
+  },
+  "peerDependencies": {
     "svelte": "^3.38.3"
-  }
+  },
+  "keywords": [
+    "svelte",
+    "router",
+    "route",
+    "framework",
+    "javascript",
+    "ssr"
+  ]
 }
