--- a/packages/svelte/package.json
+++ b/packages/svelte/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@easyroute/svelte",
-  "version": "3.2.0-alpha.0",
+  "version": "3.2.0-alpha.1",
   "description": "Config-based router for Svelte in style of Vue Router with SSR support",
   "author": "Alexey Solovyov <plotinka@lyoha.info>",
   "homepage": "https://easyroute.lyoha.info",
@@ -31,7 +31,7 @@
     "url": "https://github.com/easyroute-router/easyroute/issues"
   },
   "dependencies": {
-    "@easyroute/core": "2.0.0"
+    "@easyroute/core": "2.0.0-alpha.0"
   },
   "peerDependencies": {
     "svelte": "^3.38.3"
