--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@easyroute/core",
-  "version": "2.0.0-alpha.0",
+  "version": "2.0.0-alpha.1",
   "description": "Framework-agnostic router for JavaScript single-page applications",
   "keywords": [
     "javascript",
@@ -21,8 +21,7 @@
     "hash-mode": "hash-mode",
     "history-mode": "history-mode",
     "silent-mode": "silent-mode",
-    "utils": "utils",
-    "test": "__tests__"
+    "utils": "utils"
   },
   "files": [
     "dist",
