--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "eslint": "^7.3.1",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "husky": "^4.2.5",
+    "husky": "^4.3.8",
     "jest": "^26.1.0",
     "lerna": "^4.0.0",
-    "lint-staged": "^10.4.0",
+    "lint-staged": "^10.5.4",
     "node-notifier": ">=8.0.1",
     "prettier": "^2.0.5",
     "regexparam": "^1.3.0",
@@ -25,17 +25,25 @@
     "rollup-plugin-cleaner": "^1.0.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
+    "simple-git-hooks": "^2.5.1",
     "tslib": "^2.0.1",
     "typedoc": "^0.20.32",
     "typescript": "^3.9.7"
   },
   "scripts": {
     "postinstall": "lerna bootstrap --hoist --no-ci",
+    "prepare": "husky install",
     "build": "lerna run build --concurrency=1 --stream",
     "test": "lerna run test --concurrency=1 --stream",
-    "publish:npm": "lerna publish from-package"
+    "lint": "lerna run lint --concurrency=1 --stream",
+    "publish:npm": "lerna publish from-package",
+    "test:lint": "npm run lint && npm run test",
+    "lintstaged": "lint-staged"
   },
   "workspaces": [
     "packages/*"
-  ]
+  ],
+  "simple-git-hooks": {
+    "pre-commit": "npm run lintstaged"
+  }
 }
