--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@easyroute/core",
-  "version": "2.0.0-alpha.3",
+  "version": "2.0.0",
   "description": "Framework-agnostic router for JavaScript single-page applications",
   "keywords": [
     "javascript",
