--- a/packages/svelte/package.json
+++ b/packages/svelte/package.json
@@ -36,7 +36,7 @@
     "@easyroute/core": "2.0.2"
   },
   "peerDependencies": {
-    "svelte": "^3.0.0"
+    "svelte": "^3.0.0 || ^4.0.0"
   },
   "keywords": [
     "svelte",
